--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: '>=3.1.1 <4.0.0'
 
 
 dependencies:
@@ -26,19 +26,21 @@ dependencies:
   get_storage: ^2.1.1
   flutter_svg: ^2.0.7
   equatable: ^2.0.5
+  flutter_facebook_auth: ^6.0.1
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.3
+  change_app_package_name: ^1.1.0
+
 
 
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
 
   assets:
