--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: '>=3.1.5 <4.0.0'
 
 
 dependencies:
@@ -18,22 +18,24 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
-  font_awesome_flutter: ^10.5.0
-  google_fonts: ^5.1.0
+  font_awesome_flutter: ^10.6.0
+  google_fonts: ^6.1.0
   device_preview: ^1.1.0
-  dio: ^5.3.2
+  cached_network_image: ^3.3.0
+
+  dio: ^5.3.3
   get: ^4.6.6
   get_storage: ^2.1.1
-  flutter_svg: ^2.0.7
+  flutter_svg: ^2.0.9
   equatable: ^2.0.5
-  flutter_facebook_auth: ^6.0.1
+  flutter_facebook_auth: ^6.0.2
   google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.3
+  flutter_lints: ^3.0.0
   change_app_package_name: ^1.1.0
 
 flutter:
