--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 
 dependencies:
@@ -22,20 +22,22 @@ dependencies:
   google_fonts: ^6.1.0
   device_preview: ^1.1.0
   cached_network_image: ^3.3.0
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
 
   dio: ^5.3.3
   get: ^4.6.6
   get_storage: ^2.1.1
   flutter_svg: ^2.0.9
   equatable: ^2.0.5
-  flutter_facebook_auth: ^6.0.2
-  google_sign_in: ^6.1.5
+  flutter_facebook_auth: ^6.0.3
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
   change_app_package_name: ^1.1.0
 
 flutter:
